--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * Revert to using sysctl ipv6.conf.default for ip6-privacy
 * Allow specifying a system OVS interface by MAC address
 * ndisc: Support multiple gateways for a single network
+* wifi: Support configuring channel-width in AP mode
 
 =============================================
 NetworkManager-1.48
