device: support reapplying bridge-port VLANs
For now, always reapply the VLANs unconditionally, even if they didn't
change in kernel.

To set again the VLANs on the port we need to clear all the existing
one before. However, this deletes also the VLAN for the default-pvid
on the bridge. Therefore, we need some additional logic to inject the
default-pvid in the list of VLANs.

Co-authored-by: Íñigo Huguet <ihuguet@redhat.com>
(cherry picked from commit c5d1e35f993e8d3aca3aac23035663cf95df840b)

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Overview of changes since NetworkManager-1.48.2
   addresses configured on interfaces, NetworkManager now takes into
   account the content of /etc/hosts.
 * keyfile: Stop writing offensive terms into keyfiles
+* Support reapplying the VLANs on bridge ports.
 
 ===============================================
 NetworkManager-1.48.2
