po/ru: back out unintended changes to the metadata
Seems like and older or broken template has snuck in at some point,
replacing "NetworkManager" with "PACKAGE" and removing copyright notices
of other translations. Bring that back.

Fixes: 3444af517f47 ('po: update Russian (ru) translation')

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/1996
(cherry picked from commit 2cd40063c22a6514d3479b6935c74f998064554c)
(cherry picked from commit 5a1f1f669feea675bd351b3a9434e3108eacff24)
(cherry picked from commit 5d25d69ec76a43fba9fc0874abd9f65e06412b5e)

--- a/po/ru.po
+++ b/po/ru.po
@@ -1,7 +1,18 @@
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-#
+# Copyright (C) 2024 Дронова Юлия <juliette.tux@gmail.com>,
+# Leonid Kanter <leon@asplinux.ru>, 2006, 2007.
+# Артём Попов <artfwo@gmail.com>, 2009.
+# Yulia <ypoyarko@redhat.com>, 2010.
+# Sergey Isachenko aka Zabuldon <vortexius@gmail.com>, 2011.
+# Yuri Kozlov <yuray@komyakino.ru>, 2011.
+# Yuri Myasoedov <omerta13@yandex.ru>, 2012.
+# Stas Solovey <whats_up@tut.by>, 2012, 2014, 2015.
+# ljanda <ljanda@redhat.com>, 2017. #zanata.
+# lrintel <lrintel@redhat.com>, 2017. #zanata.
+# tchuang <tchuang@redhat.com>, 2017. #zanata.
+# ljanda <ljanda@redhat.com>, 2018. #zanata.
+# lrintel <lrintel@redhat.com>, 2018. #zanata.
 # Дронова Юлия <juliette.tux@gmail.com>, 2023.
+# This file is distributed under the same license as the NetworkManager package.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
