keyfile: do not write offensive terms into keyfile
As part of the conscious language efforts we are not writing offensive
terms into keyfiles anymore. This won't break users upgrading as we
still read such values if they are present into the keyfile.

For existing profiles, NetworkManager will remove the offensive terms
when editing the keyfile.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/2009
(cherry picked from commit 9f6ecbae695caef987490b74d2f3bafc289082dd)

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Overview of changes since NetworkManager-1.48.2
 * When looking up the system hostname from the reverse DNS lookup of
   addresses configured on interfaces, NetworkManager now takes into
   account the content of /etc/hosts.
+* keyfile: Stop writing offensive terms into keyfiles
 
 ===============================================
 NetworkManager-1.48.2
