keyfile: do not write offensive terms into keyfile
As part of the conscious language efforts we are not writing offensive
terms into keyfiles anymore. This won't break users upgrading as we
still read such values if they are present into the keyfile.

For existing profiles, NetworkManager will remove the offensive terms
when editing the keyfile.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/2009

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * Allow specifying a system OVS interface by MAC address
 * ndisc: Support multiple gateways for a single network
 * wifi: Support configuring channel-width in AP mode
+* keyfile: Stop writing offensive terms into keyfiles
 
 =============================================
 NetworkManager-1.48
