--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   when no other IPv4 is set.
 * Remove support for building with Autotools
 * Add IPVLAN interface support
+* Allow to manually configure the authentication of LTE's initial EPS Bearer.
 
 =============================================
 NetworkManager-1.50
