ethtool: support Forward Error Correction(fec)
Introducing support of ethtool FEC mode:

D-BUS API: `fec-mode: uint32_t`.
Keyfile:

```
[ethtool]
fec-mode=<uint32_t>
```

nmcli: `ethtool.fec-mode` allowing values are any combination of:
 * auto
 * off
 * rs
 * baser
 * llrs

Unit test cases included.

Resolves: https://issues.redhat.com/browse/RHEL-24055

Signed-off-by: Gris Ge <fge@redhat.com>

--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   ipv4.routed-dns and ipv6.routed-dns properties; when enabled, each
   name server is reached only via the device that specifies it.
 * Support OCI in nm-cloud-setup
+* Added support for ethtool FEC mode
 
 =============================================
 NetworkManager-1.50
