cloud-setup: Add OCI (Oracle Cloud) provider
Initial support for OCI. It doesn't support VLAN configuration yet as
the requirements are not clear. It doesn't support secondary IP
addresses because the IMDS server doesn't expose them.

Instead of using plain text format, it gets a single response in JSON
format and parses it. The dependency to jansson is now mandatory for
that.

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * Support automatically adding routes to DNS servers via the
   ipv4.routed-dns and ipv6.routed-dns properties; when enabled, each
   name server is reached only via the device that specifies it.
+* Support OCI in nm-cloud-setup
 
 =============================================
 NetworkManager-1.50
