--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,18 @@
 ===============================================
+NetworkManager-1.48.14
+Overview of changes since NetworkManager-1.48.12
+===============================================
+
+* nmcli: fix handling of connection.down-on-poweroff property
+* sriov: only validate sriov capacity when enabled
+* wwan: fix crash with IPv4 and method=auto
+* dns: fix deleting internal global DNS configuration
+* wifi: fix list corruption when scanning with explicit SSID
+* bonding: steer IGMP queries to the active bond balance-slb primary port
+* bonding: send ARP announcement on bonding-slb link/carrier down
+* remove routes added by NM on reapply
+
+===============================================
 NetworkManager-1.48.12
 Overview of changes since NetworkManager-1.48.10
 ===============================================
