dhcp: drop dhcpcanon support
Drop support for the "dhcpcanon" DHCP client. It's unmantained, as the
last code change was in 2018:

  https://github.com/juga0/dhcpcanon/commits

There is no need to first deprecate it because it was still marked as
"experimental" in NM. Also, it's not packaged by any recent distro, so
we can assume that nobody will miss it.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/2112

--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   DNS over TLS name servers.
 * The initrd-generator understands the "rd.net.dns" option to configure
   global name servers.
+* Drop support for the "dhcpcanon" DHCP client.
 
 =============================================
 NetworkManager-1.50
