--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
 ===============================================
+NetworkManager-1.46.6
+Overview of changes since NetworkManager-1.46.4
+===============================================
+
+* Support reapplying the VLANs on bridge ports.
+* Support routing rules for VPN connections.
+* Place the route to the VPN gateway into the table defined by the
+  "ipv{4,6}.route-table" properties.
+
+===============================================
 NetworkManager-1.46.4
 Overview of changes since NetworkManager-1.46.2
 ===============================================
