libnm-core: fix error message if address-data parsing fails
The code checks for presence of 'address' and 'prefix', so these fields
should be part of the error message.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/2118

--- a/po/de.po
+++ b/po/de.po
@@ -3588,7 +3588,7 @@ msgstr "Ein Wert wurde für »%s« erwartet\n"
 
 #: src/libnm-core-impl/nm-utils.c:2361
 #, c-format
-msgid "IP address requires fields \"dest\" and \"prefix\" (idx=%u)"
+msgid "IP address requires fields \"address\" and \"prefix\" (idx=%u)"
 msgstr ""
 
 #: src/libnm-core-impl/nm-utils.c:2540
