--- a/po/tr.po
+++ b/po/tr.po
@@ -3428,7 +3428,7 @@ msgstr "'%s', '%s' için geçerli bir değer değil"
 
 #: src/libnm-core-impl/nm-utils.c:2359
 #, c-format
-msgid "IP address requires fields \"dest\" and \"prefix\" (idx=%u)"
+msgid "IP address requires fields \"address\" and \"prefix\" (idx=%u)"
 msgstr ""
 
 #: src/libnm-core-impl/nm-utils.c:2538
