--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   options from connections, instead of merging all together.
 * Add support for a new rd.net.dhcp.client-id option in
   nm-initrd-generator.
+* Added support for CLAT (464XLAT) using a BPF program.
 
 =============================================
 NetworkManager-1.54
