nmtui/ipv6: add "shared" method to ipv6 options
It was previously only available for IPv4, and the option
was missing from the IPv6 methods.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/2138
(cherry picked from commit e983e8a46fbf23914631fe722682e3fc06d050fc)

--- a/NEWS
+++ b/NEWS
@@ -37,6 +37,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * Dnsconfd plugin can now be used for configuration of system-wide DNS
   caching resolver. If dnsconfd plugin is enabled and ipvX.routed-dns is
   set to -1 then adding routes is by default enabled.
+* Add "shared" method to the IPv6 configuration options in nmtui.
 
 =============================================
 NetworkManager-1.50
