--- a/NEWS
+++ b/NEWS
@@ -45,6 +45,11 @@ Overview of changes since NetworkManager-1.50
   caching resolver. If dnsconfd plugin is enabled and ipvX.routed-dns is
   set to -1 then adding routes is by default enabled.
 * Add "shared" method to the IPv6 configuration options in nmtui.
+* Fix a bug that prevented the activation of bond and bridge's ports in some cases
+* Fix a bug that prevented the activation of OVS interfaces in some cases
+* Fix MTPCP endpoint creation for IPv4 with DAD and IPv6 tentative addresses
+* Fix some VPN routes not being added to the table specified in ipv4/6.routing-table.
+  This fix allow to use policy routing to mitigate Tunnelvision attacks.
 
 =============================================
 NetworkManager-1.50
