libnm, nmcli: introduce new "prefix-delegation" setting
Introduce a new "prefix-delegation" setting. It contains properties
related to the configuration of downstream interfaces using IPv6
prefix-delegation. The only property at the moment is "subnet-id",
which specifies which prefix to choose when the delegation contains
multiple /64 networks.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,9 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * Add systemd services to provide networking in the initrd.
 * Introduce a new "ovs-dpdk.lsc-interrupt" property to configure the
   Link State Change (LSC) detection mode for OVS DPDK interfaces.
+* Add a new "prefix-delegation" setting containing a "subnet-id"
+  property that specifies the subnet to choose on the downstream
+  interface when using IPv6 prefix delegation.
 
 =============================================
 NetworkManager-1.52
