ovs: allow reapplying ovs-bridge and ovs-port properties
Allow reapplying the following properties:

 - ovs-bridge.fail-mode
 - ovs-bridge.mcast-snooping-enable
 - ovs-bridge.rstp-enable
 - ovs-bridge.stp-enable
 - ovs-port.bond-downdelay
 - ovs-port.bond-mode
 - ovs-port.bond-updelay
 - ovs-port.lacp
 - ovs-port.tag
 - ovs-port.trunks
 - ovs-port.vlan-mode

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,8 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   property that specifies the subnet to choose on the downstream
   interface when using IPv6 prefix delegation.
 * Add support for configuring the loopback interface in nmtui.
+* Most of the properties of ovs-bridge and ovs-port connections can
+  now be reapplied at runtime without bringing the connection down.
 
 =============================================
 NetworkManager-1.52
